[gd_scene load_steps=7 format=3 uid="uid://o2yvdjpq7bl"]

[ext_resource type="Texture2D" uid="uid://cch5kh8hac8c2" path="res://assets/HUD/portaitHolder.png" id="1_54kix"]
[ext_resource type="Script" path="res://scripts/healthbar.gd" id="1_vqihi"]
[ext_resource type="Texture2D" uid="uid://cx6ti6eh06in" path="res://assets/HUD/healthBar.png" id="2_yp0d6"]
[ext_resource type="Texture2D" uid="uid://2fwsfi0x2yb3" path="res://assets/HUD/healthPip.png" id="3_ekm0j"]
[ext_resource type="Texture2D" uid="uid://7tuydk1vohe5" path="res://assets/player/head.png" id="4_x8sgt"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_km38v"]
properties/0/path = NodePath("HealthPip:visible")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("HealthPip2:visible")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("HealthPip3:visible")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("HealthPip4:visible")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:current_health")
properties/4/spawn = true
properties/4/replication_mode = 1

[node name="Healthbar" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_vqihi")

[node name="PortaitHolder" type="Sprite2D" parent="."]
position = Vector2(0.5, 4)
texture = ExtResource("1_54kix")

[node name="HealthBar" type="Sprite2D" parent="."]
position = Vector2(376.5, 5)
texture = ExtResource("2_yp0d6")

[node name="HealthPip" type="Sprite2D" parent="."]
position = Vector2(140.5, 4)
texture = ExtResource("3_ekm0j")

[node name="HealthPip2" type="Sprite2D" parent="."]
position = Vector2(299.5, 4)
texture = ExtResource("3_ekm0j")

[node name="HealthPip3" type="Sprite2D" parent="."]
position = Vector2(458.5, 4)
texture = ExtResource("3_ekm0j")

[node name="HealthPip4" type="Sprite2D" parent="."]
position = Vector2(617.5, 4)
texture = ExtResource("3_ekm0j")

[node name="Head" type="Sprite2D" parent="."]
position = Vector2(-2, 2)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_x8sgt")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_km38v")
